--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+
 	<section class="section hero">
 		<div class="container hero__container">
 			<header class="header">
@@ -61,14 +62,227 @@
 					<img src="./img/content/1st_screen_hero/main_burger.png" alt="burger">
 				</div>
 				<div class="hero__desc">
-					<h1 class="hero__title">мы делаем</h1>
+					<h1 class="title title--color--yellow hero__title">мы делаем</h1>
 					<div class="hero__subtitle">натуральные бургеры</div>
 				</div>
 			</div>
 		</div>
-		<button type="button" class="arrow-scroll">
-			<img src="./img/icons/arrow-scroll.svg" alt="scroll">
-		</button>
+		<button type="button" class="arrow-scroll"></button>
 	</section>
+
+	<section class="section section--non--sentered best">
+		<div class="container">
+			<h2 class="title title--color--balck title--centered">мы лучшие</h2>
+			<ul class="best__list">
+				<li class="best__item">
+					<div class="best__picture">
+						<img src="../img/icons/meat.svg" alt="meat" class="best_picture-icon">
+					</div>
+					<div class="best__desc">
+						<div class="best__desc-title">
+							100% свежее мясо
+						</div>
+						<div class="best__desc-text">
+							Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+						</div>
+					</div>
+				</li>
+				<li class="best__item">
+					<div class="best__picture">
+						<img src="../img/icons/hand.svg" alt="meat" class="best_picture-icon">
+					</div>
+					<div class="best__desc">
+						<div class="best__desc-title">
+							Ручная сборка
+						</div>
+						<div class="best__desc-text">
+							Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.
+						</div>
+					</div>
+				</li>
+				<li class="best__item">
+					<div class="best__picture">
+						<img src="../img/icons/natural.svg" alt="meat" class="best_picture-icon">
+					</div>
+					<div class="best__desc">
+						<div class="best__desc-title">
+							Натуральные ингридиенты
+						</div>
+						<div class="best__desc-text">
+							Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</section>
+
+	<section class="section">
+		<ul class="reviews__list">
+			<li class="reviews__item">
+				<img src="../img/content/reviews/1.jpg" alt="photo" class="reviews__pic">
+				<div class="reviews__hover">
+					<h3 class="reviews__title">
+						константин спилберг
+					</h3>
+					<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+					<button type="button" class="btn">Подробнее</button>
+				</div>
+			</li>
+			<li class="reviews__item">
+				<img src="../img/content/reviews/2.jpg" alt="photo" class="reviews__pic">
+				<div class="reviews__hover">
+					<h3 class="reviews__title">
+						константин спилберг
+					</h3>
+					<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+					<button type="button" class="btn">Подробнее</button>
+				</div>
+			</li>
+			<li class="reviews__item">
+				<img src="../img/content/reviews/3.jpg" alt="photo" class="reviews__pic">
+				<div class="reviews__hover">
+					<h3 class="reviews__title">
+						константин спилберг
+					</h3>
+					<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+					<button type="button" class="btn">Подробнее</button>
+				</div>
+			</li>
+			<li class="reviews__item">
+				<img src="../img/content/reviews/4.jpg" alt="photo" class="reviews__pic">
+				<div class="reviews__hover">
+					<h3 class="reviews__title">
+						константин спилберг
+					</h3>
+					<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+					<button type="button" class="btn">Подробнее</button>
+				</div>
+			</li>
+			<li class="reviews__item">
+				<img src="../img/content/reviews/5.jpg" alt="photo" class="reviews__pic">
+				<div class="reviews__hover">
+					<h3 class="reviews__title">
+						константин спилберг
+					</h3>
+					<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+					<button type="button" class="btn">Подробнее</button>
+				</div>
+			</li>
+			<li class="reviews__item">
+				<img src="../img/content/reviews/6.jpg" alt="photo" class="reviews__pic">
+				<div class="reviews__hover">
+					<h3 class="reviews__title">
+						константин спилберг
+					</h3>
+					<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+					<button type="button" class="btn">Подробнее</button>
+				</div>
+			</li>
+			<li class="reviews__item">
+				<img src="../img/content/reviews/7.jpg" alt="photo" class="reviews__pic">
+				<div class="reviews__hover">
+					<h3 class="reviews__title">
+						константин спилберг
+					</h3>
+					<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+					<button type="button" class="btn">Подробнее</button>
+				</div>
+			</li>
+			<li class="reviews__item">
+				<img src="../img/content/reviews/8.jpg" alt="photo" class="reviews__pic">
+				<div class="reviews__hover">
+					<h3 class="reviews__title">
+						константин спилберг
+					</h3>
+					<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+					<button type="button" class="btn">Подробнее</button>
+				</div>
+			</li>
+		</ul>
+	</section>
+
+	<section class="section order">
+		<div class="container order__container">
+			<h2 class="title title--color--yellow title--centered">
+				закажите доставку
+			</h2>
+			<div class="form">
+				<form action="" class="form__elem">
+					<div class="form__column">
+						<div class="form__row">
+							<label class="form__block">
+								<span class="form__block-title">Имя</span>
+								<input type="text" class="form__input">
+							</label>
+							<label class="form__block">
+								<span class="form__block-title">Телефон</span>
+								<input type="text" class="form__input">
+							</label>
+						</div>
+						<div class="form__row">
+							<label class="form__block">
+								<span class="form__block-title">Улица</span>
+								<input type="text" class="form__input">
+							</label>
+						</div>
+						<div class="form__row">
+							<label class="form__block">
+								<span class="form__block-title">Дом</span>
+								<input type="text" class="form__input">
+							</label>
+							<label class="form__block">
+								<span class="form__block-title">Корпус</span>
+								<input type="text" class="form__input">
+							</label>
+							<label class="form__block">
+								<span class="form__block-title">Квартира</span>
+								<input type="text" class="form__input">
+							</label>
+							<label class="form__block">
+								<span class="form__block-title">Этаж</span>
+								<input type="text" class="form__input">
+							</label>
+						</div>
+					</div>
+					<div class="form__column">
+						<div class="form__row">
+							<label class="form__block">
+								<span class="form__block-title">Комментарий</span>
+								<textarea class="form__input form__input--textarea" name="comment"></textarea>
+							</label>
+						</div>
+						<div class="form__row"><!-- radio+check--btn --></div>
+						<div class="form__row"><!-- radio+check--btn --></div>
+						<div class="form__row">
+							<button type="submit" class="btn form__btn--submit">Заказать</button>
+							<button type="reset" class="form__btn--clear">Очистить</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
+
+	<ul class="fixed-menu">
+		<li class="fixed-menu__item fixed-menu__item--active">
+			<button type="button" class="fixed-menu__dot"></button>
+		</li>
+		<li class="fixed-menu__item">
+			<button type="button" class="fixed-menu__dot"></button>
+		</li>
+		<li class="fixed-menu__item">
+			<button type="button" class="fixed-menu__dot"></button>
+		</li>
+		<li class="fixed-menu__item">
+			<button type="button" class="fixed-menu__dot"></button>
+		</li>
+		<li class="fixed-menu__item">
+			<button type="button" class="fixed-menu__dot"></button>
+		</li>
+		<li class="fixed-menu__item">
+			<button type="button" class="fixed-menu__dot"></button>
+		</li>
+	</ul>
 </body>
 </html>
