--- a/index.html
+++ b/index.html
@@ -64,11 +64,18 @@
 								</ul>
 							</nav>
 							<button type="button" class="btn">Заказать</button>
+							<a href="#" class="hamburger-menu">
+								<span class="hamburger-menu__line"></span>
+								<span class="hamburger-menu__line"></span>
+								<span class="hamburger-menu__line"></span>
+								<span class="hamburger-menu__line"></span>
+								<span class="hamburger-menu__line"></span>
+							</a>
 						</div>
 					</header>
 					<div class="hero__content">
 						<div class="hero__content-picture">
-							<img src="./img/content/1st_screen_hero/main_burger.png" alt="burger">
+							<img src="./img/content/1st_screen_hero/main_burger.png" alt="burger" class="hero__content-img">
 							<svg class="drops">
 								<use xlink:href="./img/icons/sprite.svg#drops"></use>
 							</svg>
@@ -147,8 +154,9 @@
 							<h3 class="reviews__title">
 								константин спилберг
 							</h3>
-							<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
-							<button type="button" class="btn btn--bg--black">Подробнее</button>
+							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
 						</div>
 					</li>
 					<li class="reviews__item">
@@ -157,7 +165,7 @@
 							<h3 class="reviews__title">
 								константин спилберг
 							</h3>
-							<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							<button type="button" class="btn btn--bg--black">Подробнее</button>
 						</div>
 					</li>
@@ -167,7 +175,7 @@
 							<h3 class="reviews__title">
 								константин спилберг
 							</h3>
-							<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							<button type="button" class="btn btn--bg--black">Подробнее</button>
 						</div>
 					</li>
@@ -177,7 +185,7 @@
 							<h3 class="reviews__title">
 								константин спилберг
 							</h3>
-							<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							<button type="button" class="btn btn--bg--black">Подробнее</button>
 						</div>
 					</li>
@@ -187,7 +195,7 @@
 							<h3 class="reviews__title">
 								константин спилберг
 							</h3>
-							<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							<button type="button" class="btn btn--bg--black">Подробнее</button>
 						</div>
 					</li>
@@ -197,7 +205,7 @@
 							<h3 class="reviews__title">
 								константин спилберг
 							</h3>
-							<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							<button type="button" class="btn btn--bg--black">Подробнее</button>
 						</div>
 					</li>
@@ -207,7 +215,7 @@
 							<h3 class="reviews__title">
 								константин спилберг
 							</h3>
-							<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							<button type="button" class="btn btn--bg--black">Подробнее</button>
 						</div>
 					</li>
@@ -217,7 +225,7 @@
 							<h3 class="reviews__title">
 								константин спилберг
 							</h3>
-							<p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Парадигматическая запятых живет выйти взобравшись сих которой семантика, дорогу знаках дороге, гор образ если решила, ведущими моей страна речью. Эта?</p>
+							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							<button type="button" class="btn btn--bg--black">Подробнее</button>
 						</div>
 					</li>
