--- a/index.html
+++ b/index.html
@@ -145,6 +145,57 @@
 					</ul>
 				</div>
 			</section>
+
+			<section class="section menu">
+				<div class="menu__title">
+					<h2 class="title title--color--white">меню</h2>
+				</div>
+				<div class="menu__content">
+					<div class="vertical-accordeon">
+						<ul class="vertical-accordeon__list">
+							<li class="vertical-accordeon__item ">
+								<a href="#" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-1.jpg')">
+									<span class="title title--color--white vertical-accordeon__title">
+										Для мясоедов
+									</span>
+								</a>
+								<div class="vertical-accordeon__contennt">
+									<p class="vertical-accordeon__text">	
+										Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+										Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+									</p>
+								</div>
+							</li>
+							<li class="vertical-accordeon__item vertical-accordeon__item--active">
+								<a href="#" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-2.jpg')">
+									<span class="title title--color--white vertical-accordeon__title">
+										вегетарианское
+									</span>
+								</a>
+								<div class="vertical-accordeon__contennt">
+									<p class="vertical-accordeon__text">	
+										Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+										Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+									</p>
+								</div>
+							</li>
+							<li class="vertical-accordeon__item">
+								<a href="#" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-3.jpg')">
+									<span class="title title--color--white vertical-accordeon__title">
+										диетическое
+									</span>
+								</a>
+								<div class="vertical-accordeon__contennt">
+									<p class="vertical-accordeon__text">	
+										Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+										Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.
+									</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 		
 			<section class="section reviews">
 				<ul class="reviews__list">
@@ -166,7 +217,8 @@
 								константин спилберг
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
 						</div>
 					</li>
 					<li class="reviews__item">
@@ -176,7 +228,8 @@
 								константин спилберг
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
 						</div>
 					</li>
 					<li class="reviews__item">
@@ -186,7 +239,8 @@
 								константин спилберг
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
 						</div>
 					</li>
 					<li class="reviews__item">
@@ -196,7 +250,8 @@
 								константин спилберг
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
 						</div>
 					</li>
 					<li class="reviews__item">
@@ -206,7 +261,8 @@
 								константин спилберг
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
 						</div>
 					</li>
 					<li class="reviews__item">
@@ -216,7 +272,8 @@
 								константин спилберг
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
 						</div>
 					</li>
 					<li class="reviews__item">
@@ -226,7 +283,8 @@
 								константин спилберг
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
 						</div>
 					</li>
 				</ul>
