--- a/index.html
+++ b/index.html
@@ -146,6 +146,147 @@
 				</div>
 			</section>
 
+			<section class="section burgers-slider">
+				<div class="container">
+					<div class="slider-container">
+						<a href="#" class="arrow-scroll-btn arrow-scroll-btn--left" id="slider-left">
+							<svg class="arrow-scroll">
+								<use xlink:href="./img/icons/sprite.svg#arrow-scroll"></use>
+							</svg>
+						</a>
+						<div class="slider-container__list">
+							<div class="slider-container__items">
+								<div class="slider-container__item">
+									<div class="burger-card">
+										<div class="burger-card__left">
+											<div class="burger-card__composition">
+												<div class="burger-card__composition--item">
+													<div class="burger-card__composition-icon">
+														<svg class="burger-icon">
+															<use xlink:href="./img/icons/sprite.svg#burger-icon"></use>
+														</svg>
+													</div>
+													<div class="burger-card__composition-title">состав</div>
+												</div>
+												<div class="burger-card__composition--hover">
+													<ul class="composition">
+														<li class="composition__item">
+															<svg class="beef">
+																<use xlink:href="./img/icons/sprite.svg#beef"></use>
+															</svg>
+															<div class="composition__item--text">
+																<div class="composition__item--text-value">Говядина</div>
+																<div class="composition__item--amount">300 г</div>
+															</div>
+														</li>
+														<li class="composition__item">
+															<svg class="buns">
+																<use xlink:href="./img/icons/sprite.svg#buns"></use>
+															</svg>
+															<div class="composition__item--text">
+																<div class="composition__item--text-value">Булочки</div>
+																<div class="composition__item--amount">100 г</div>
+															</div>
+														</li>
+														<li class="composition__item">
+															<svg class="salad">
+																<use xlink:href="./img/icons/sprite.svg#salad"></use>
+															</svg>
+															<div class="composition__item--text">
+																<div class="composition__item--text-value">Зелень</div>
+																<div class="composition__item--amount">70 г</div>
+															</div>
+														</li>
+														<li class="composition__item">
+															<svg class="sauce">
+																<use xlink:href="./img/icons/sprite.svg#sauce"></use>
+															</svg>
+															<div class="composition__item--text">
+																<div class="composition__item--text-value">Соус</div>
+																<div class="composition__item--amount">150 г</div>
+															</div>
+														</li>
+														<li class="composition__item">
+															<svg class="cucumber">
+																<use xlink:href="./img/icons/sprite.svg#cucumber"></use>
+															</svg>
+															<div class="composition__item--text">
+																<div class="composition__item--text-value">Овощи</div>
+																<div class="composition__item--amount">200 г</div>
+															</div>
+														</li>
+														<li class="composition__item">
+															<svg class="cheese">
+																<use xlink:href="./img/icons/sprite.svg#cheese"></use>
+															</svg>
+															<div class="composition__item--text">
+																<div class="composition__item--text-value">Сыр</div>
+																<div class="composition__item--amount">80 г</div>
+															</div>
+														</li>
+													</ul>
+												</div>
+											</div>
+											<div class="burger-card__image">
+												<img src="./img/content/burgers/dark_beef_burger.png" alt="dark_beef_burger" class="burger-card__pic">
+											</div>
+											<div class="burger-card__calory">
+												<div class="burger-card__calory--pic">
+													<svg class="kkal">
+														<use xlink:href="./img/icons/sprite.svg#kkal"></use>
+													</svg>
+													<div class="burger-card__calory--kkal-amount">
+														1200
+													</div>	
+												</div>
+												<div class="burger-card__calory--kkal">
+													ккал
+												</div>
+											</div>
+										</div>
+										<div class="burger-card__right">
+											<h2 class="title title--color--white">Dark BEEF Burger</h2>
+											<div class="burger-card__description">
+												Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+											</div>
+											<div class="burger-card__order">
+												<div class="burger-card__order--price">
+													<span class="burger-card__order--amount">500</span>
+													<span class="burger-card__order--currency">рублей</span>
+												</div>
+												<button type="button" class="btn">Заказать</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<ul class="slider-dots">
+							<li class="slider-dots__img slider-dots__img--active">
+								<img class="slider-dots__img--pic" src="./img/content/burgers/dark_beef_burger.png" alt="dark_beef_burger" >
+							</li>
+							<li class="slider-dots__img">
+								<img class="slider-dots__img--pic" src="./img/content/burgers/Spicy_Shrimp_Burger.png" alt="Spicy_Shrimp_Burger">
+							</li>
+							<li class="slider-dots__img">
+								<img class="slider-dots__img--pic" src="./img/content/burgers/Chiken burger.png" alt="Chiken burger">
+							</li>
+							<li class="slider-dots__img">
+								<img class="slider-dots__img--pic" src="./img/content/burgers/NYC-Diner-Bacon-Cheeseburger.png" alt="Diner-Bacon-Cheeseburger">
+							</li>
+							<li class="slider-dots__img">
+								<img class="slider-dots__img--pic" src="./img/content/burgers/burger_sandwich_PNG4124.png" alt="burger_sandwich">
+							</li>
+						</ul>
+						<a href="#" class="arrow-scroll-btn arrow-scroll-btn--right" id="slider-right">
+							<svg class="arrow-scroll">
+								<use xlink:href="./img/icons/sprite.svg#arrow-scroll"></use>
+							</svg>
+						</a>
+					</div>
+				</div>
+			</section>
+
 			<section class="section menu">
 				<div class="menu__title">
 					<h2 class="title title--color--white">меню</h2>
