add js close btn

--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
 															</div>
 														</li>
 													</ul>
+													<div class="composition__close">
+														<a href="#" class="composition__close-btn"></a>
+													</div>
 												</div>
 											</div>
 											<div class="burger-card__image">
