--- a/index.html
+++ b/index.html
@@ -590,6 +590,19 @@
 		</li>
 	</ul>
 
+	<script type="template" id="reviewsPopup" >
+		<div class="overlay">
+			<div class="overlay__continer">
+				<div class="overlay__close">
+					<a href="#" class="overlay__close-btn"></a>
+				</div>
+				<div class="overlay__content">
+					<div class="overlay__title"></div>
+					<div class="overlay__text"></div>
+				</div>
+			</div>
+		</div>
+	</script>
 	<script src="./js/main.js"></script>
 </body>
 </html>
