add popup js code

--- a/index.html
+++ b/index.html
@@ -347,88 +347,104 @@
 						<img src="./img/content/reviews/1.jpg" alt="photo" class="reviews__pic">
 						<div class="reviews__hover">
 							<h3 class="reviews__title">
-								константин спилберг
+								константин спилберг 1
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
-							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							<div class="reviews__btn">
+								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							</div>
 						</div>
 					</li>
 					<li class="reviews__item">
 						<img src="./img/content/reviews/2.jpg" alt="photo" class="reviews__pic">
 						<div class="reviews__hover">
 							<h3 class="reviews__title">
-								константин спилберг
+								константин спилбергг 2
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
-							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							<div class="reviews__btn">
+								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							</div>
 						</div>
 					</li>
 					<li class="reviews__item">
 						<img src="./img/content/reviews/3.jpg" alt="photo" class="reviews__pic">
 						<div class="reviews__hover">
 							<h3 class="reviews__title">
-								константин спилберг
+								константин спилберг 3
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
-							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							<div class="reviews__btn">
+								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							</div>
 						</div>
 					</li>
 					<li class="reviews__item">
 						<img src="./img/content/reviews/4.jpg" alt="photo" class="reviews__pic">
 						<div class="reviews__hover">
 							<h3 class="reviews__title">
-								константин спилберг
+								константин спилберг 4
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
-							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							<div class="reviews__btn">
+								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							</div>
 						</div>
 					</li>
 					<li class="reviews__item">
 						<img src="./img/content/reviews/5.jpg" alt="photo" class="reviews__pic">
 						<div class="reviews__hover">
 							<h3 class="reviews__title">
-								константин спилберг
+								константин спилберг 5
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
-							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							<div class="reviews__btn">
+								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							</div>
 						</div>
 					</li>
 					<li class="reviews__item">
 						<img src="./img/content/reviews/6.jpg" alt="photo" class="reviews__pic">
 						<div class="reviews__hover">
 							<h3 class="reviews__title">
-								константин спилберг
+								константин спилберг 6
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
-							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							<div class="reviews__btn">
+								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							</div>
 						</div>
 					</li>
 					<li class="reviews__item">
 						<img src="./img/content/reviews/7.jpg" alt="photo" class="reviews__pic">
 						<div class="reviews__hover">
 							<h3 class="reviews__title">
-								константин спилберг
+								константин спилберг 7
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
-							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							<div class="reviews__btn">
+								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							</div>
 						</div>
 					</li>
 					<li class="reviews__item">
 						<img src="./img/content/reviews/8.jpg" alt="photo" class="reviews__pic">
 						<div class="reviews__hover">
 							<h3 class="reviews__title">
-								константин спилберг
+								константин спилберг 8
 							</h3>
 							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-							<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
-							<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							<div class="reviews__btn">
+								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
+								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
+							</div>
 						</div>
 					</li>
 				</ul>
@@ -597,8 +613,8 @@
 					<a href="#" class="overlay__close-btn"></a>
 				</div>
 				<div class="overlay__content">
-					<div class="overlay__title"></div>
-					<div class="overlay__text"></div>
+					<div class="reviews__overlay--title"></div>
+					<div class="reviews__overlay--text"></div>
 				</div>
 			</div>
 		</div>
