add vertical-accordeon js

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 				</div>
 			</section>
 
-			<section class="section menu">
+			<section class="section menu" id="menu" >
 				<div class="menu__title">
 					<h2 class="title title--color--white">меню</h2>
 				</div>
@@ -298,7 +298,7 @@
 					<div class="vertical-accordeon">
 						<ul class="vertical-accordeon__list">
 							<li class="vertical-accordeon__item ">
-								<a href="#" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-1.jpg')">
+								<a href="#menu" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-1.jpg')">
 									<span class="title title--color--white vertical-accordeon__title">
 										Для мясоедов
 									</span>
@@ -310,8 +310,8 @@
 									</p>
 								</div>
 							</li>
-							<li class="vertical-accordeon__item vertical-accordeon__item--active">
-								<a href="#" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-2.jpg')">
+							<li class="vertical-accordeon__item">
+								<a href="#menu" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-2.jpg')">
 									<span class="title title--color--white vertical-accordeon__title">
 										вегетарианское
 									</span>
@@ -324,7 +324,7 @@
 								</div>
 							</li>
 							<li class="vertical-accordeon__item">
-								<a href="#" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-3.jpg')">
+								<a href="#menu" class="vertical-accordeon__btn" style="background-image: url('./img/content/vertival-accordeon/vertical-accordeon-3.jpg')">
 									<span class="title title--color--white vertical-accordeon__title">
 										диетическое
 									</span>
@@ -427,7 +427,7 @@
 							<h3 class="reviews__title">
 								константин спилберг 7
 							</h3>
-							<p class="reviews__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+							<p class="reviews__text">Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
 							<div class="reviews__btn">
 								<button type="button" class="btn btn--bg--black btn--desktop">Подробнее</button>
 								<button type="button" class="btn btn--bg--black btn--mobile">Читать отзыв</button>
