--- a/index.html
+++ b/index.html
@@ -146,6 +146,66 @@
 				</div>
 			</section>
 
+			<section class="section team">
+				<div class="team__bg">
+					<div class="team__content">
+						<h2 class="title title--color--yellow">команда</h2>
+						<div class="staff">
+							<ul class="staff__list">
+								<li class="staff__item">
+									<h3 class="staff__title">Дэниэл Редклиф</h3>
+									<div class="staff__description">
+										<div class="staff__photo">
+											<img src="./img/content/team/staff-1.png" alt="staff-photo" class="staff__pic">
+										</div>
+										<div class="staff__position-desc">
+											<div class="staff__position">Оператор</div>
+											<div class="staff__text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </div>
+										</div>
+									</div>
+								</li>
+								<li class="staff__item staff__active">
+									<h3 class="staff__title">Ричард Джеймс</h3>
+									<div class="staff__description">
+										<div class="staff__photo">
+											<img src="./img/content/team/staff-1.png" alt="staff-photo" class="staff__pic">
+										</div>
+										<div class="staff__position-desc">
+											<div class="staff__position">Оператор</div>
+											<div class="staff__text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </div>
+										</div>
+									</div>
+								</li>
+								<li class="staff__item">
+									<h3 class="staff__title">Джейк Финн</h3>
+									<div class="staff__description">
+										<div class="staff__photo">
+											<img src="./img/content/team/staff-1.png" alt="staff-photo" class="staff__pic">
+										</div>
+										<div class="staff__position-desc">
+											<div class="staff__position">Оператор</div>
+											<div class="staff__text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </div>
+										</div>
+									</div>
+								</li>
+								<li class="staff__item">
+									<h3 class="staff__title">Николай Иванов</h3>
+									<div class="staff__description">
+										<div class="staff__photo">
+											<img src="./img/content/team/staff-1.png" alt="staff-photo" class="staff__pic">
+										</div>
+										<div class="staff__position-desc">
+											<div class="staff__position">Оператор</div>
+											<div class="staff__text">С радостью поможет подобрать идеальный бургер и оформить заказ.  </div>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+
 			<section class="section burgers-slider">
 				<div class="container">
 					<div class="slider-container">
