--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 												</div>
 											</div>
 											<div class="burger-card__image">
-												<img src="./img/content/burgers/dark_beef_burger.png" alt="dark_beef_burger" class="burger-card__pic">
+												<img src="./img/content/burgers/burger_sandwich_PNG4124.png" alt="burger_sandwich" class="burger-card__pic">
 											</div>
 											<div class="burger-card__calory">
 												<div class="burger-card__calory--pic">
@@ -414,7 +414,7 @@
 											</div>
 										</div>
 										<div class="burger-card__right">
-											<h2 class="title title--color--white">Dark BEEF Burger</h2>
+											<h2 class="title title--color--white">burger sandwich</h2>
 											<div class="burger-card__description">
 												Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
 											</div>
@@ -503,7 +503,7 @@
 												</div>
 											</div>
 											<div class="burger-card__image">
-												<img src="./img/content/burgers/dark_beef_burger.png" alt="dark_beef_burger" class="burger-card__pic">
+												<img src="./img/content/burgers/Chiken burger.png" alt="Chiken burger" class="burger-card__pic">
 											</div>
 											<div class="burger-card__calory">
 												<div class="burger-card__calory--pic">
@@ -520,7 +520,7 @@
 											</div>
 										</div>
 										<div class="burger-card__right">
-											<h2 class="title title--color--white">Dark BEEF Burger</h2>
+											<h2 class="title title--color--white">chiken burger</h2>
 											<div class="burger-card__description">
 												Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
 											</div>
@@ -609,7 +609,7 @@
 												</div>
 											</div>
 											<div class="burger-card__image">
-												<img src="./img/content/burgers/dark_beef_burger.png" alt="dark_beef_burger" class="burger-card__pic">
+												<img src="./img/content/burgers/NYC-Diner-Bacon-Cheeseburger.png" alt="NYC-Diner-Bacon-Cheeseburger" class="burger-card__pic">
 											</div>
 											<div class="burger-card__calory">
 												<div class="burger-card__calory--pic">
@@ -626,7 +626,7 @@
 											</div>
 										</div>
 										<div class="burger-card__right">
-											<h2 class="title title--color--white">Dark BEEF Burger</h2>
+											<h2 class="title title--color--white">Diner Bacon Cheeseburger</h2>
 											<div class="burger-card__description">
 												Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
 											</div>
@@ -715,7 +715,7 @@
 												</div>
 											</div>
 											<div class="burger-card__image">
-												<img src="./img/content/burgers/dark_beef_burger.png" alt="dark_beef_burger" class="burger-card__pic">
+												<img src="./img/content/burgers/Spicy_Shrimp_Burger.png" alt="Spicy_Shrimp_Burger" class="burger-card__pic">
 											</div>
 											<div class="burger-card__calory">
 												<div class="burger-card__calory--pic">
@@ -732,7 +732,7 @@
 											</div>
 										</div>
 										<div class="burger-card__right">
-											<h2 class="title title--color--white">Dark BEEF Burger</h2>
+											<h2 class="title title--color--white">Spicy Shrimp Burger</h2>
 											<div class="burger-card__description">
 												Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
 											</div>
@@ -1099,6 +1099,18 @@
 				<div class="overlay__content">
 					<div class="reviews__overlay--title"></div>
 					<div class="reviews__overlay--text"></div>
+				</div>
+			</div>
+		</div>
+	</script>
+	<script type="template" id="formPopup" >
+		<div class="overlay">
+			<div class="overlay__continer overlay__continer--form">
+				<div class="overlay__content overlay__content--form">
+					<div class="reviews__overlay--text">сообщение отправлено</div>
+				</div>
+				<div class="overlay__close overlay__close--form">
+					<button type="button" class="btn">Закрыть</button>
 				</div>
 			</div>
 		</div>
