--- a/src/index.html
+++ b/src/index.html
@@ -1115,6 +1115,7 @@
 			</section>
 
 			<section class="section contacts">
+				<div class="map" id="map"></div>
 				<footer class="footer">
 					<div class="container">
 						<div class="footer__content">
@@ -1216,6 +1217,8 @@
 			</div>
 		</div>
 	</script>
+	<script src="https://www.youtube.com/iframe_api"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="./js/main.js"></script>
 </body>
 
