--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	<meta property="og:site_name" content="Заказ бургеров">
 	<!-- fonts -->
 	<!-- css build -->
-	<!-- <link rel="stylesheet" href="./css/main.min.css"> -->
+	<link rel="stylesheet" href="./css/main.min.css">
 	<!-- css dev -->
-	<link rel="stylesheet" href="./css/main.css">
+	<!-- <link rel="stylesheet" href="./css/main.css"> -->
 </head>
 
 <body>
