--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,8 @@
 	</script>
 	<script src="https://www.youtube.com/iframe_api"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script src="./js/main.js"></script>
+	<script src="./js/main.min.js"></script>
+	<!-- <script src="./js/main.js"></script> for dev --> 
 </body>
 
 </html>
