doc: fix deploy link

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
 	<meta property="og:site_name" content="Заказ бургеров">
 	<!-- fonts -->
 	<!-- css build -->
-	<!-- <link rel="stylesheet" href="./css/main.min.css"> -->
+	<link rel="stylesheet" href="./css/main.min.css">
 	<!-- css dev -->
-	<link rel="stylesheet" href="./css/main.css">
+	<!-- <link rel="stylesheet" href="./css/main.css"> -->
 </head>
 
 <body>
@@ -1202,7 +1202,8 @@
 	</script>
 	<script src="https://www.youtube.com/iframe_api"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-	<script src="./js/main.js"></script>
+  <script src="./js/main.min.js"></script>
+	<!-- <script src="./js/main.js"></script> for dev --> 
 </body>
 
 </html>
